Added streams service
